[gd_scene load_steps=10 format=3 uid="uid://d4n3jrsf5mklr"]

[ext_resource type="Script" path="res://Framework/Scripts/User Interface/GUIManager.gd" id="1_0yc14"]
[ext_resource type="FontFile" uid="uid://ckv4g6uel7i3t" path="res://Demo Game/Fonts/Quicksand-VariableFont_wght.ttf" id="2_1sx1m"]
[ext_resource type="Script" path="res://Framework/Scripts/User Interface/Chrono.gd" id="3_c3ugi"]
[ext_resource type="FontFile" uid="uid://bxpy77eotkdkx" path="res://Demo Game/Fonts/static/Quicksand-Regular.ttf" id="4_tsbie"]
[ext_resource type="Texture2D" uid="uid://bb1ncrplwpqri" path="res://Demo Game/Textures/User Interface/stamina-bar-background.png" id="5_oxb7g"]
[ext_resource type="Texture2D" uid="uid://buwyfcb3i6s74" path="res://Demo Game/Textures/User Interface/stamina-bar-foreground.png" id="6_pumyp"]

[sub_resource type="LabelSettings" id="LabelSettings_n2582"]
line_spacing = 1.0
font = ExtResource("2_1sx1m")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_jvvc3"]
font = ExtResource("2_1sx1m")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_1uukh"]
line_spacing = 5.0
font = ExtResource("4_tsbie")
font_size = 21

[node name="GUI" type="Control" node_paths=PackedStringArray("chrono")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yc14")
chrono = NodePath("PanelContainer/VBoxContainer/ChronoLabel")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 24.0
offset_right = -30.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ChronoLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_n2582")
horizontal_alignment = 1
script = ExtResource("3_c3ugi")
start_at_beginning = false

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sample Level Text"
label_settings = SubResource("LabelSettings_jvvc3")
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
label_settings = SubResource("LabelSettings_1uukh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StaminaProgressBar" type="TextureProgressBar" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
max_value = 3.0
value = 3.0
texture_under = ExtResource("5_oxb7g")
texture_progress = ExtResource("6_pumyp")
texture_progress_offset = Vector2(65, 25.5)
